# BlipKit

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .htaccess  .travis.yml  CMakeLists.txt  ChangeLog  Doxyfile  Gruntfile.js  INSTALL  LICENSE  LOGO  Makefile.am  Makefile.in  README  README.md  TODO  _config.yml  aclocal.m4  check-sdl.m4  common.m4  config.h.in  configure  configure.ac  package-lock.json  package.json
.github/workflows/: c.yml
_includes/: footer.html  head.html  nav-tag-list.html  navigation.html  pagetree.html  tag-cloud.html
_layouts/: default.html  page.html  post.html
css/: _code.scss  _columns.scss  _comments.scss  _consent.scss  _layout.scss  _main.scss  _mixins.scss  _player.scss  _posts.scss  _responsive.scss  _theme.scss  _typography.scss  fonts.scss  main.scss
dev/bfm/: BKBFMReader.c  BKBFMReader.h  BKBFMWriter.c  BKBFMWriter.h  BKByteBuffer.c  BKByteBuffer.h  BKByteBufferSource.c  BKByteBufferSource.h  BKInstruction.c  BKInstruction.h  BKInstructionTest.c  Blip File Format.md  Makefile.am  blipbfmtest.c
dev/bfm/Instructions/: BKInstruction.c  BKInstruction.h  Generate.pl  Instructions.txt
dev/blipchip/: BKChip.c  BKChip.h  Makefile.am  Makefile.in  main.c
dev/bliplay/: BKBlipReader.c  BKBlipReader.h  BKBlipWriter.c  BKBlipWriter.h  BKCompiler.c  BKCompiler.h  BKInterpreter.c  BKInterpreter.h  BKParser.c  BKParser.h  BKSDLTrack.c  BKSDLTrack.h  Makefile.am  Makefile.in  README.md  bliplay.c  item_list.h  main.c
dev/bliplay/examples/: drum-n-bass.blip  gameboy-start.blip  generic-boss-appears.blip  ghost-bounce.blip  hyperion-star-racer.blip  new.blip  sample.blip  template.blip  test1.blip  test2.blip  test3.blip  test4.blip  test5.blip  test6.blip  test7.blip  test8.blip  test9.blip  wysiwyg.blip
dev/cpp/: BKClock.hpp  BKClockCPP.h  BKContext.hpp  BKContextCPP.h  BKData.hpp  BKDataCPP.h  BKInstrument.hpp  BKInstrumentCPP.h  BKTrack.hpp  BKTrackCPP.h  BKUnit.hpp  BKUnitCPP.h  BlipKit.hpp  BlipKitCPP.h  Makefile.am  test.cpp
dev/fft/: BKComplex.h  BKFFT.c  BKFFT.h  BKFFTTest.c  Makefile.am  test.c
dev/step_phases/: Makefile.am  README.md  harm_phases.c  sinc_phases.c  step_phases.c
dev/test/: BKEnvelopeTest.c  BKExUnitTest.c  BKExUnitTest.h  BKInterpolationTest.c  BKSequenceTest.c
dev/tone_periods/: Makefile.am  tone_periods.c
doc/css/: _code.scss  _main.scss  _mixins.scss  _typography.scss  main.css  main.scss
errors/: 403.html  404.html  500.html
examples/: Makefile.am  Makefile.in  arpeggio.c  clocks.c  common.h  divider.c  envelope.c  itemland3.raw  raw1.raw  sample.c  sample_sustain.c  scratch.c  stereo.c  tone.c  tri_bip_1.raw  waveform.c
js/: main.js  matomo.js
m4/: common.m4
src/: BKArray.c  BKArray.h  BKBase.c  BKBase.h  BKBlockPool.c  BKBlockPool.h  BKBuffer.c  BKBuffer.h  BKByteBuffer.c  BKByteBuffer.h  BKClock.c  BKClock.h  BKComplex.h  BKContext.c  BKContext.h  BKContext_internal.h  BKData.c  BKData.h  BKData_internal.h  BKEnvelope.c  BKEnvelope.h  BKFFT.c  BKFFT.h  BKHashTable.c  BKHashTable.h  BKInstrument.c  BKInstrument.h  BKInstrument_internal.h  BKInterpolation.c  BKInterpolation.h  BKInterpolationTest.c  BKIntervalState.c  BKObject.c  BKObject.h  BKSequence.c  BKSequence.h  BKString.c  BKString.h  BKTime.h  BKTone.c  (+15 more)
test/: Makefile.am  context.c  test.h  test_context.c  test_fft.c  test_track.c  test_wave.c  track.c  wave.c
